--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "guanli",
-  "version": "1.0.0",
-  "description": "graphQL powered web app",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev":"nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/YellowFlash2012/guanli.git"
-  },
-  "author": "Vivien H.",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/YellowFlash2012/guanli/issues"
-  },
-  "homepage": "https://github.com/YellowFlash2012/guanli#readme",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
-    "helmet": "^5.1.0",
-    "mongoose": "^6.3.6"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.1"
-  }
+    "name": "guanli",
+    "version": "1.0.0",
+    "description": "graphQL powered web app",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/YellowFlash2012/guanli.git"
+    },
+    "author": "Vivien H.",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/YellowFlash2012/guanli/issues"
+    },
+    "homepage": "https://github.com/YellowFlash2012/guanli#readme",
+    "dependencies": {
+        "colors": "^1.4.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.1",
+        "express-graphql": "^0.12.0",
+        "graphql": "^15.8.0",
+        "helmet": "^5.1.0",
+        "mongoose": "^6.3.6",
+        "socket.io": "^4.5.1"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.1"
+    },
+    "engines": {
+        "node": "16.13.2"
+    }
 }
