--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
         "dev": "nodemon server.js",
+	    "client-install": "npm install --prefix client",
         "client": "npm start --prefix client",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
