--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "dotenv": "^16.0.1"
     },
     "engines": {
-        "node": "16.13.2"
+        "node": "16.13.2",
+        "npm":"8.1.2"
     }
 }
