--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
         "dev": "nodemon server.js",
-	    "client-install": "npm install --prefix client",
+        "client-install": "npm install --prefix client",
         "client": "npm start --prefix client",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
@@ -25,6 +25,7 @@
     "dependencies": {
         "colors": "^1.4.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-graphql": "^0.12.0",
         "graphql": "^15.8.0",
@@ -32,11 +33,8 @@
         "mongoose": "^6.3.6",
         "socket.io": "^4.5.1"
     },
-    "devDependencies": {
-        "dotenv": "^16.0.1"
-    },
     "engines": {
         "node": "16.13.2",
-        "npm":"8.1.2"
+        "npm": "8.1.2"
     }
 }
